<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_add_to_home_screen_24"
        android:title="@string/home" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/baseline_account_box_24"
        android:title="@string/account" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/baseline_categories_24"
        android:title="@string/categories" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/baseline_orders_money_24"
        android:title="@string/orders" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />

</menu>
